# opticks

./: .gitignore  .gitlab-ci.yml  .hgignore  CFG4.rst  CMakeLists.txt  G4CXTest_GEOM.sh  LICENSE  Makefile  OpticksCMakeConfig.hh.in  README.rst  addtag.sh  cf.sh  conf.py  cx.sh  cxd.sh  cxs_min.py  cxs_min.sh  cxs_min_scan.sh  cxt_min.sh  docs_touch.sh  example.opticks_config  git_identifier.sh  go.sh  gosub.sh  index.rst  mo.sh  month.sh  oc.bash  oc.bash.dead  oe.bash  oks.bash  oldopticks.bash  om.bash  opticks.bash  opticks.bash.old  opticks.patch  opticks.rst  opticksdata.bash  overview.rst  oxrap  (+7 more)
CSG/: AABB.h  CMakeLists.txt  CSGClone.cc  CSGClone.h  CSGCloneTest.sh  CSGConfig.cmake.in  CSGCopy.cc  CSGCopy.h  CSGCopyTest.sh  CSGDebug_Cylinder.cc  CSGDebug_Cylinder.hh  CSGDemoTest.sh  CSGDraw.cc  CSGDraw.h  CSGEnum.h  CSGFoundry.cc  CSGFoundry.h  CSGFoundry.py  CSGFoundrySimtraceRerunTest.sh  CSGFoundryTest.sh  CSGGenstep.cc  CSGGenstep.h  CSGGeometry.cc  CSGGeometry.h  CSGGrid.cc  CSGGrid.h  CSGImport.cc  CSGImport.h  CSGMaker.cc  CSGMaker.h  CSGMakerTest.sh  CSGName.cc  CSGName.h  CSGNode.cc  CSGNode.h  CSGNodeTest.sh  CSGParams.h  CSGPrim.cc  CSGPrim.h  CSGPrimSpec.cc  (+97 more)
CSGOptiX/: BI.h  Binding.h  CMakeLists.txt  CSGOPTIX_API_EXPORT.hh  CSGOPTIX_LOG.cc  CSGOPTIX_LOG.hh  CSGOptiX.cc  CSGOptiX.h  CSGOptiX6.cu  CSGOptiX6geo.cu  CSGOptiX7.cu  CSGOptiX7.sh  CSGOptiXRenderTest.sh  CSGOptiXService.h  CSGOptiXSimulate.cc  CSGOptiXSimulate.h  CSGOptiX_old.cc  Check.cu  Ctx.cc  Ctx.h  FindDirUpTree.py  Frame.cc  Frame.h  GAS.h  GAS_Builder.cc  GAS_Builder.h  IAS.h  IAS_Builder.cc  IAS_Builder.h  InstanceId.h  OPT.h  OPTIX_CHECK.h  OptiX6Test.cu  OptiX7Test.cu  PIP.cc  PIP.h  PRD.h  Params.cc  Params.h  Pointer.h  (+88 more)
CSG_GGeo/: CMakeLists.txt  CSG_GGEO_API_EXPORT.hh  CSG_GGEO_LOG.cc  CSG_GGEO_LOG.hh  CSG_GGeo.cc  CSG_GGeoTest.cc  CSG_GGeo_Convert.cc  CSG_GGeo_Convert.h  go.sh  grab.sh  index.rst  run.sh  run1.sh  rundbg.sh
GeoChain/: CMakeLists.txt  GEOCHAIN_API_EXPORT.hh  GEOCHAIN_LOG.cc  GEOCHAIN_LOG.hh  GeoChain.cc  GeoChain.h  GeoChain.hh  GeoChainTest.cc  GeoMaker.cc  GeoMaker.hh  grab.sh  mtranslate.sh  multi_translate.sh  oldcylinder_translate.sh  pub.sh  run.sh  translate.sh
ana/: CGDMLDetector.py  CMakeLists.txt  G4OKTest.py  G4OpticksAnaMgr.sh  GNodeLib.py  GParts.py  GParts.sh  GScintillatorLib.py  GTree.py  NRngDiffuseTest.py  OpticksFlags.py  OpticksGenstepEnum.py  OpticksIdentity.py  OpticksPhoton.py  OpticksQuery.py  PDGCodeEnum.py  PropLib.py  ScintillationIntegral.py  SensorLib.py  ab.py  ab.sh  ab_old.py  abplt.py  abprofile.py  abs.py  absmry.py  abstat.py  amdahl.py  amdahl.sh  ana.bash  ana.py  ana.rst  analytic_boundary_dbg.py  analytic_cf_triangulated.py  aoi.py  aoi.sh  array_repr_mixin.py  autobreakpoint.py  axes.py  base.py  (+337 more)
analytic/: CMakeLists.txt  bezier.py  bezier_dev0.py  bezier_dev1.py  catmull_rom_spline.py  catmull_rom_spline.sh  catmull_rom_spline_2.py  catmull_rom_spline_2.sh  clip.py  csg.py  cubic.py  deep.py  gdml.py  gdml2idmap.py  gdml_builder.py  gdmlchk.py  gdmldev.py  glm.py  nnode_test_cpp.py  pathpatch.py  polyconfig.py  prism.py  reduce.py  sc.py  tbool.py  tboolean.py  textgrid.py  tgltf_gdml.py  translate_gdml.py  treebase.py  treebuilder.py
assimprap/: ASIRAP_API_EXPORT.hh  ASIRAP_BODY.hh  ASIRAP_LOG.cc  ASIRAP_LOG.hh  AssimpCommon.cc  AssimpCommon.hh  AssimpGGeo.cc  AssimpGGeo.hh  AssimpImporter.cc  AssimpImporter.hh  AssimpNode.cc  AssimpNode.hh  AssimpRegistry.cc  AssimpRegistry.hh  AssimpSelection.cc  AssimpSelection.hh  AssimpTree.cc  AssimpTree.hh  CMakeLists.txt  asirap.bash  assimprap.bash  go.sh
boostrap/: BArrayDigest.cc  BArrayDigest.hh  BBit.cc  BBit.hh  BBnd.cc  BBnd.hh  BBufSpec.cc  BBufSpec.hh  BCfg.cc  BCfg.hh  BCfgTest.cc  BCfgTest.sh  BConfig.cc  BConfig.hh  BConfigConstituentTest.cc  BConverter.cc  BConverter.hh  BDemo.cc  BDemo.hh  BDigest.cc  BDigest.hh  BDir.cc  BDir.hh  BDirect.hh  BDynamicDefine.cc  BDynamicDefine.hh  BEnv.cc  BEnv.hh  BFile.cc  BFile.hh  BFoo.cc  BFoo.hh  BHex.cc  BHex.hh  BJSONParser.hh  BJson.cc  BJson.hh  BList.cc  BList.hh  BListenUDP.cc  (+92 more)
boostrapclient/: BoostRapClient.cc  CMakeLists.txt  brc.bash
c4/: C4.cc  C4.hh  C4Solid.cc  C4Solid.hh  C4_API_EXPORT.hh  C4_LOG.cc  C4_LOG.hh  CMakeLists.txt  c4.bash
cfg4/: ActionInitialization.cc  ActionInitialization.hh  C4Cerenkov1042.cc  C4Cerenkov1042.hh  C4FPEDetection.cc  C4FPEDetection.hh  C4PhotonCollector.cc  C4PhotonCollector.hh  CAction.cc  CAction.hh  CAlignEngine.cc  CAlignEngine.hh  CAlignEngine.rst  CBndLib.cc  CBndLib.hh  CBorderSurfaceTable.cc  CBorderSurfaceTable.hh  CBoundaryProcess.cc  CBoundaryProcess.hh  CCerenkov.cc  CCerenkov.hh  CCerenkovGenerator.cc  CCerenkovGenerator.hh  CCerenkovSource.cc  CCerenkovSource.hh  CCheck.cc  CCheck.hh  CCollector.cc  CCollector.hh  CCtx.cc  CCtx.hh  CDebug.cc  CDebug.hh  CDetector.cc  CDetector.hh  CDetector.rst  CDump.cc  CDump.hh  CEvent.cc  CEvent.hh  (+241 more)
cmake/: CMakeLists.txt
cmakecheck/: CMakeLists.txt  cmakecheck.bash
cudarap/: CBufSlice.cc  CBufSlice.hh  CBufSpec.cc  CBufSpec.hh  CDevice.cu  CDevice.hh  CMakeLists.txt  CMakeLists.txt.old  CResource.cc  CResource.hh  CResource_.cu  CRng.cc  CRng.cu  CRng.hh  CUDARAP_API_EXPORT.hh  CUDARAP_LOG.cc  CUDARAP_LOG.hh  CUt.cc  CUt.hh  LaunchCommon.cc  LaunchCommon.hh  LaunchSequence.cc  LaunchSequence.hh  cfloat4x4.h  cuRANDWrapper.cc  cuRANDWrapper.hh  cuRANDWrapper_kernel.cu  cuRANDWrapper_kernel.hh  cudarap.bash  go.sh
examples/: CMakeLists.txt  README.rst  cudarap  examples.bash  g4x.bash  go.sh  gogo.sh  ls.sh  thrustrap  use.py
extg4/: BoxMinusOrb.sh  CMakeLists.txt  GeneralSphereDEV.sh  LHCbRichFlatMirr.sh  LXe_Materials.cc  LXe_Materials.hh  OpNoviceDetectorConstruction.cc  OpNoviceDetectorConstruction.hh  SphereIntersectBox.sh  SphereWithPhiSegment.sh  SphereWithThetaSegment.sh  X4.cc  X4.hh  X4AffineTransform.cc  X4AffineTransform.hh  X4Array.cc  X4Array.hh  X4CSG.cc  X4CSG.hh  X4Dump.cc  X4Dump.hh  X4Entity.cc  X4Entity.hh  X4GDML.cc  X4GDML.hh  X4GDMLMatrix.cc  X4GDMLMatrix.hh  X4GDMLParser.cc  X4GDMLParser.hh  (+126 more)
(+8661 files in other folders)
